correct colours for OpenShift brand

--- a/publican-openshift/en-US/css/menu.css
+++ b/publican-openshift/en-US/css/menu.css
@@ -7,16 +7,16 @@ a:visited {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	color:#a70000;
+	color:#333333;
 }
 
 div.producttitle {
-/*	background: #a70000 url(../images/h1-bg.png) top left repeat; */
-	color:#a70000;
+/*	background: #888888 url(../images/h1-bg.png) top left repeat; */
+	color:#888888;
 }
 
 .section h1.title {
-	color:#a70000;
+	color:#333333;
 }
 
 
@@ -26,7 +26,7 @@ table {
 }
 
 table th {
-	background-color:#900;
+	background-color:#474747;
 }
 
 table tr.even td {
@@ -34,11 +34,11 @@ table tr.even td {
 }
 
 .revhistory table th {
-	color:#a70000;
+	color:#333333;
 }
 
 .titlepage .edition {
-	color: #a70000;
+	color: #333333;
 }
 
 span.remark{
@@ -46,6 +46,6 @@ span.remark{
 }
 
 .home{
-    color: #a70000;
+    color: #333333;
 }
 
